# aiogram_events

./: README.md  pyproject.toml
.github/workflows/: checks.yml
aiogram_events/: __init__.py
aiogram_events/decorators/: README.md  __init__.py  decorators.py
aiogram_events/event/: README.md  __init__.py  event.py  event_group.py
aiogram_events/stepper/: README.md  __init__.py  entry.py  stepper.py
aiogram_events/utils/: README.md  __init__.py  utils.py
dev/: pydoc.sh  requirements.txt
