[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiogram_events"
version = "0.2.0"
description = "A simple way to catch and process events in the aiogram library."
authors = [{name = "iwatkot", email = "iwatkot@gmail.com"}]
license = {text = "MIT License"}
readme = "README.md"
keywords = ["telegram", "aiogram", "events", "handlers"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiogram>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/iwatkot/aiogram_events"
Repository = "https://github.com/iwatkot/aiogram_events"

[tool.setuptools.packages.find]
where = ["."]
include = ["aiogram_events*"]
exclude = ["dev*"]